# py38-cc-ds

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_WORKFLOW.md  README.md  TASKS.md  TODO.md  constitution.md  pytest.ini  requirements-frozen.txt  requirements.txt  setup.py  test_env_setup.sh  test_external_mcp.py  test_mcp_integration.py  test_mcp_server.py  test_model.py  test_skills_integration.py  test_task.md
.claude/: settings.json
tasks/10_create-a-rust-based-cli/: Cargo.toml  README.md  test_sample.md
tasks/10_create-a-rust-based-cli/src/: analysis.rs  cli.rs  error.rs  io.rs  main.rs  models.rs  output.rs  parser.rs
tasks/11_create-an-interactive-rust/: Cargo.toml  README.md
tasks/11_create-an-interactive-rust/src/: error.rs  storage.rs
tasks/11_create-an-interactive-rust/src/collector/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
tasks/12_create-a-cli-static/static-gen/: pyproject.toml
tasks/12_create-a-cli-static/static-gen/src/staticgen/: __init__.py  assets.py  cli.py  config.py  content.py  feed.py  generator.py  processor.py  renderer.py  server.py  sitemap.py  utils.py
tasks/12_create-a-cli-static/static-gen/templates/default/: base.html  category.html  default.html  index.html  post.html  tag.html
tasks/14_create-a-markdown-based-person/: README.md  pyproject.toml  requirements.txt
tasks/14_create-a-markdown-based-person/notes/: bidirectional-linking.md  getting-started.md  zettelkasten-method.md
tasks/14_create-a-markdown-based-person/src/pk/: __init__.py  cli.py  config.py  display.py  models.py  parser.py  search.py  storage.py
tasks/14_create-a-markdown-based-person/tests/: __init__.py  test_parser.py  test_search.py  test_storage.py
tasks/16_create-a-rust-based-cli/project-init/: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODE.md  LICENSE  README.md
tasks/16_create-a-rust-based-cli/project-init/src/: cli.rs  config.rs  error.rs  git.rs  history.rs  interactive.rs  main.rs  scaffolding.rs  session.rs  templates.rs  variables.rs  wizard.rs
tasks/16_create-a-rust-based-cli/project-init/src/plugin/: api.rs  error.rs  loader.rs  manifest.rs  mod.rs  package.rs  registry.rs
tasks/16_create-a-rust-based-cli/project-init/templates/node/: template.yaml
tasks/18_create-a-comprehensive-rust/taskmanager/: Cargo.toml
tasks/18_create-a-comprehensive-rust/taskmanager/src/: main.rs  task_manager.rs
tasks/19_create-a-rust-based-cli/rustvault/: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.rs
tasks/19_create-a-rust-based-cli/rustvault/examples/: basic_usage.sh
tasks/19_create-a-rust-based-cli/rustvault/man/: rustvault.1
tasks/19_create-a-rust-based-cli/rustvault/src/: cli.rs  crypto.rs  error.rs  generator.rs  lib.rs  main.rs  otp.rs  storage.rs  vault.rs
tasks/19_create-a-rust-based-cli/rustvault/tests/: integration_tests.rs
tasks/1_implement-core-capability-1/: pyproject.toml
tasks/1_implement-core-capability-1/src/sleepless_agent/: config.yaml
tasks/21_create-a-rust-based-cli/: Cargo.toml  README.md
tasks/21_create-a-rust-based-cli/src/: config.rs  main.rs  metrics.rs  ui.rs
tasks/22_create-a-rust-based-cli/: Cargo.toml  README.md
tasks/22_create-a-rust-based-cli/src/: cli.rs  clipboard.rs  crypto.rs  error.rs  main.rs  models.rs  password.rs  storage.rs
tasks/23_create-a-rust-based-cli/notes-cli/: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  build.sh
tasks/23_create-a-rust-based-cli/notes-cli/src/: backup.rs  cli.rs  cli_old.rs  config.rs  crypto.rs  error.rs  main.rs  password.rs  storage.rs  types.rs
tasks/23_create-a-rust-based-cli/notes-cli/tests/: integration_tests.rs
tasks/25_create-a-rust-based-cli/kg-cli/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE.md  quick_start.sh
tasks/25_create-a-rust-based-cli/kg-cli/examples/: create_example_notes.sh
tasks/25_create-a-rust-based-cli/kg-cli/src/: export.rs  lib.rs  linking.rs  main.rs  search.rs  storage.rs  types.rs
tasks/25_create-a-rust-based-cli/kg-cli/tests/: integration_tests.rs
tasks/27_create-a-rust-based-interactiv/vaultkeeper/: Cargo.toml
tasks/27_create-a-rust-based-interactiv/vaultkeeper/src/: error.rs  main.rs
tasks/28_create-a-real-time-collaborati/code-execution-playground/backend/: Cargo.toml
tasks/34_build-an-ai-powered-command/: .gitignore  CONTRIBUTING.md  EXAMPLES.md  README.md  demo.py  pyproject.toml
tasks/34_build-an-ai-powered-command/src/ai_command_palette/: __init__.py  cli.py
tasks/34_build-an-ai-powered-command/tests/: test_core.py
tasks/5_create-a-rust-based-cli/data-viz-cli/: Cargo.toml
tasks/5_create-a-rust-based-cli/data-viz-cli/examples/: monthly_data.csv  products.csv  sales.json  scatter.json
tasks/5_create-a-rust-based-cli/data-viz-cli/src/: charts.rs  cli.rs  config.rs  data.rs  error.rs  main.rs  output.rs
tasks/6_create-a-rust-based-http/http_benchmark/: Cargo.toml
tasks/6_create-a-rust-based-http/http_benchmark/src/: cli.rs  client.rs  comparison.rs  main.rs  metrics.rs  percentile.rs  rate_tracker.rs  report.rs
tasks/7_create-a-real-time-log/log-analyzer/: Cargo.toml
tasks/7_create-a-real-time-log/log-analyzer/src/: alerts.rs  config.rs  core.rs  detectors.rs  input.rs  lib.rs  main.rs  parsers.rs  statistics.rs
tasks/81_ill-analyze-the-project/: README.md  pyproject.toml
tasks/81_ill-analyze-the-project/src/pylint_integrator/: __init__.py  cli.py
tasks/81_ill-analyze-the-project/tests/: __init__.py  test_analyzer.py  test_config.py  test_results.py
tasks/8_create-a-rust-based-cli/sysmonitor/: Cargo.toml  README.md
tasks/8_create-a-rust-based-cli/sysmonitor/src/: alerts.rs  cli.rs  collector.rs  config.rs  display.rs  export.rs  main.rs  tui.rs  types.rs
tasks/8_create-a-rust-based-cli/sysmonitor/tests/: integration_tests.rs
tasks/9_create-an-intelligent-log/loganalyzer/: .gitignore  README.md  pyproject.toml
tasks/9_create-an-intelligent-log/loganalyzer/config/: default.yaml
(+547 files in other folders)
