[package]
name = "md_analysis"
version = "0.1.0"
edition = "2021"
description = "A comprehensive text analysis tool for markdown files"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
colored = "2.1"
regex = "1.11"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.13"
