[package]
name = "sysmon_dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
description = "Interactive CLI terminal dashboard for real-time system monitoring"

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# System information
sysinfo = "0.32"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
dirs = "5.0"

# CSV export
csv = "1.3"

# Date/time handling
chrono = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Additional utilities
itertools = "0.13"
