[package]
name = "passman"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A secure CLI password manager with AES-256-GCM encryption"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5"
rand = "0.8"
zeroize = "1.7"
thiserror = "1.0"
colored = "2.1"
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
