[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-command-palette"
version = "0.1.0"
description = "AI-powered command palette tool that learns from usage patterns"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["cli", "command-palette", "fuzzy-search", "productivity", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "textual>=0.44.0",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.scripts]
aicp = "ai_command_palette.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-command-palette"
Documentation = "https://github.com/yourusername/ai-command-palette#readme"
Repository = "https://github.com/yourusername/ai-command-palette"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.toml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
