[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylint-integrator"
version = "0.1.0"
description = "Advanced pylint integration tool for Python code quality analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pylint", "code-quality", "linting", "python", "ci-cd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pylint>=3.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "colorama>=0.4.6",
    "tomli>=2.0.0; python_version<'3.11'",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pylint-integrator = "pylint_integrator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pylint-integrator"
Documentation = "https://github.com/yourusername/pylint-integrator#readme"
Repository = "https://github.com/yourusername/pylint-integrator"
Issues = "https://github.com/yourusername/pylint-integrator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pylint_integrator = ["templates/*.html", "templates/*.json", "schemas/*.json"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=pylint_integrator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pylint.*"]
ignore_missing_imports = true
