[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "static-gen"
version = "0.1.0"
description = "A CLI static site generator that transforms Markdown files into fast, SEO-optimized HTML websites"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["static", "site-generator", "markdown", "blog", "seo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "markdown>=3.4.0",
    "pyyaml>=6.0",
    "feedgenerator>=2.0.0",
    "python-dateutil>=2.8.0",
    "pathspec>=0.10.0",
    "pygments>=2.13.0",
    "watchdog>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
static-gen = "staticgen.cli:cli"
sgen = "staticgen.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/static-gen"
Repository = "https://github.com/yourusername/static-gen"
Issues = "https://github.com/yourusername/static-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
