[package]
name = "project_init"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI productivity tool for managing project templates with customizable scaffolding"
license = "MIT"
repository = "https://github.com/yourusername/project-init"
keywords = ["cli", "template", "scaffolding", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "project-init"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Template engine
handlebars = "5.0"

# Git integration
git2 = "0.18"

# Interactive prompts
dialoguer = "0.11"
console = "0.15"

# Path handling
dirs = "5.0"
glob = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress indicators
indicatif = "0.17"

# Logging
log = "0.4"
env_logger = "0.11"

# File system operations
fs_extra = "1.3"
walkdir = "2.4"

# Date/time handling
chrono = "0.4"

# Command execution
which = "5.0"

# Interactive shell and history
rustyline = "12.0"

# Variable validation
regex = "1.10"
validator = "0.16"

# Template import from URLs
ureq = "2.9"

# Session IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Plugin system
libloading = "0.8"
semver = { version = "1.0", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
