[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"
description = "A comprehensive CLI task manager with priority queues, deadlines, and tags"
authors = ["Task Manager Team"]
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal colors
colored = "2.1"

# Interactive prompts
dialoguer = "0.11"
inquire = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
dirs = "5.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Table formatting for output
tabled = "0.16"

[dev-dependencies]
# Testing
tempfile = "3.10"
