[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"
authors = ["RustVault Contributors"]
description = "A secure CLI password manager with encryption, hierarchical vaults, and TOTP support"
license = "MIT"
repository = "https://github.com/example/rustvault"
keywords = ["password", "vault", "security", "cli", "totp"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.6", features = ["serde"] }

# TOTP/2FA
totp-lite = "2.0"
base32 = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Interactive CLI
inquire = "0.6"
rpassword = "7.3"

# File system and paths
dirs = "5.0"
fs2 = "0.4"

# Clipboard support (optional)
clipboard = "0.5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "rustvault"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
