[package]
name = "notes"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A CLI note-taking tool with markdown support, search, and tags"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Markdown parsing
pulldown-cmark = { version = "0.9", default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Directory paths
dirs = "5.0"

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }

# File system operations
walkdir = "2.4"

# Text search
regex = "1.10"

# Terminal output
colored = "2.0"

# Editor integration
edit = "0.1"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7.3"

# Compression for backups
flate2 = "1.0"
tar = "0.4"

# SHA-256 for checksums
sha2 = "0.10"
hex = "0.4"

# Base64 encoding
base64 = "0.21"

# Semantic search dependencies
async-openai = "0.14"
tokio = { version = "1.35", features = ["full"] }
ndarray = "0.15"
bincode = "1.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
