[package]
name = "kg"
version = "0.1.0"
edition = "2021"
description = "A personal knowledge graph management tool with bi-directional linking"
authors = ["KG CLI Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.1"
itertools = "0.12"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "kg"
path = "src/main.rs"
