[package]
name = "data_viz_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI data visualization tool for JSON/CSV files"
authors = ["Your Name <you@example.com>"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Template engine
askama = "0.12"

[dev-dependencies]
# Testing
tempfile = "3.8"

[[bin]]
name = "data-viz"
path = "src/main.rs"
