[package]
name = "http_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
chrono = "0.4"

[[bin]]
name = "http_bench"
path = "src/main.rs"
