[package]
name = "sysmonitor"
version = "0.1.0"
edition = "2021"
authors = ["System Monitor Team"]
description = "A comprehensive CLI tool for system resource monitoring with real-time statistics, alerts, and data export capabilities"

[dependencies]
# System information gathering
sysinfo = "0.30"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Data export
csv = "1.3"

# Configuration
config = "0.14"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Notifications (optional)
notify-rust = { version = "4.10", optional = true }

[features]
default = ["desktop-notifications"]
desktop-notifications = ["notify-rust"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "sysmonitor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
